--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,12 @@
-{{page-title "Muganda"}}
+{{page-title 'Muganda'}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+{{! The following component displays Ember's default welcome message. }}
+<h1>Welcome to Ember Js App</h1>
+<div class='flex flex-row justify-center space-x-2'>
+  <div class='bg-primary px-4 py-2 text-white rounded-md'>1</div>
+  <div class='bg-secondary px-4 py-2 text-white rounded-md'>2</div>
+  <div class='bg-primary px-4 py-2 text-white rounded-md'>3</div>
+</div>
+{{! Feel free to remove this! }}
 
 {{outlet}}
