--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,12 +1,5 @@
-{{page-title 'Muganda'}}
-
-{{! The following component displays Ember's default welcome message. }}
-<h1>Welcome to Ember Js App</h1>
-<div class='flex flex-row justify-center space-x-2'>
-  <div class='bg-primary px-4 py-2 text-white rounded-md'>1</div>
-  <div class='bg-secondary px-4 py-2 text-white rounded-md'>2</div>
-  <div class='bg-primary px-4 py-2 text-white rounded-md'>3</div>
+<div class='flex flex-col w-full min-h-full'>
+  <Base::Nav />
+  {{outlet}}
+  <Base::Foot />
 </div>
-{{! Feel free to remove this! }}
-
-{{outlet}}
